--- a/hw/hw1/index.html
+++ b/hw/hw1/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>CSUMB's BS in CS</h1>
+            <h1>CSUMB BS in CS</h1>
         </header>
         <nav>
             <hr width="50%">
@@ -19,25 +19,29 @@
             <a href="ns.html">Network and Security</a>
             <a href="se.html">Software Engineering</a>
         </nav>
+        <button class="button">Apply NOW!</button>
         <br />
         <main>
             <div class="welcomeText">
                 CSUMB's Computer Science major helps students an understand and apply fundamental computer
                 science concepts paired with applied information technology skills. Students are trained for
                 careers in the tech industry or to become competitive applicants for graduate programs.
-            </div>
             <figure id="me">
                 <img src="img/cs.jpg" alt="Picture of CS students" />
             </figure>
-            <div class="welcomeText">
                     <h2>Why study CS?</h2>
                     From communication to science to design, knowledge of computing is the key to new advancements. 
                     With this degree, you'll have the ability to make people's lives better with technology. 
                     You'll also be joining one of the most in-demand and highly paid fields. Finally, by studying 
                     Computer Science, you'll be trained to become a modern-day problem solver. You'll break down 
                     real-world challenges and design the steps computers will take to find a solution.
+            <h2>Concentrations</h2><br />
             </div>
-            
+            <div class="flex-container">
+                <div><img src="img/gd_logo.png" alt="Game Design logo" /><br /><a href="gd.html">Game Design</a></div>
+                <div><img src="img/ns_logo.png" alt="Network and Security logo" /><br /><a href="ns.html">Network and Security</a></div>
+                <div><img src="img/se_logo.png" alt="Software Engineering logo" /><br /><a href="se.html">Software Engineering</a></div>
+            </div>
         </main>
         <footer>
             <hr>
