--- a/hw/hw1/se.html
+++ b/hw/hw1/se.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta char="utf-8" /> 
+        <meta charset="utf-8" /> 
         <title>CSUMB BS Computer Science</title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
@@ -13,7 +13,7 @@
             <h1>CSUMB BS in CS</h1>
         </header>
         <nav>
-            <hr width="50%">
+            <hr />
             <a href="index.html">Home</a>
             <a href="gd.html">Game Design</a>
             <a href="ns.html">Network and Security</a>
