--- a/hw/hw1/gd.html
+++ b/hw/hw1/gd.html
@@ -21,7 +21,7 @@
         </nav>
         <button class="button">Apply NOW!</button>
         <br /><br /><br />
-        <img src="img/gd_graphic3.jpg" />
+        <img src="img/gd_graphic3.jpg" alt = "Game Design banner"/>
         <div id="content">
             
             <table>
@@ -44,9 +44,9 @@
             </table>
             <h2>Outcomes</h2>
             <ul>
-                <li><details><summary span class="hobby">Game Fundamentals:</summary> Understand the fundamental issues in the development of digital games.</details></li>
-                <li><details><summary span class="hobby">Game Programming:</summary> Develop and produce a computer game.</details></li>
-                <li><details><summary span class="hobby">Planning, Analysis and Production of Digital Games:</summary> Demonstrate the ability to analyze, plan and produce a computer game.
+                <li><details><summary>Game Fundamentals:</summary> Understand the fundamental issues in the development of digital games.</details></li>
+                <li><details><summary>Game Programming:</summary> Develop and produce a computer game.</details></li>
+                <li><details><summary>Planning, Analysis and Production of Digital Games:</summary> Demonstrate the ability to analyze, plan and produce a computer game.
                 Utilize professional level platforms and tools to produce digital games that meet the user needs and system constraints.</details></li>
             </ul>
         </div>
