--- a/hw/hw1/ns.html
+++ b/hw/hw1/ns.html
@@ -21,7 +21,7 @@
         </nav>
         <button class="button">Apply NOW!</button>
         <br /><br /><br />
-        <img src="img/ns_graphic.jpg" />
+        <img src="img/ns_graphic.jpg" alt = "Cybersecurity banner"/>
         <div id="content">
             <table>
                 <tr id="table-header">
@@ -43,9 +43,9 @@
             </table>
             <h2>Outcomes</h2>
             <ul>
-                <li><details><summary span class="hobby">Network Fundamentals:</summary> Understand and apply network fundamentals.</details></li>
-                <li><details><summary span class="hobby">Network Security:</summary> Understand and apply fundamentals of security technologies in protecting networks.</details></li>
-                <li><details><summary span class="hobby">Network Management & Administration:</summary> Apply processes and methods used to create an enterprise network plan and information systems.</details></li>
+                <li><details><summary>Network Fundamentals:</summary> Understand and apply network fundamentals.</details></li>
+                <li><details><summary>Network Security:</summary> Understand and apply fundamentals of security technologies in protecting networks.</details></li>
+                <li><details><summary>Network Management & Administration:</summary> Apply processes and methods used to create an enterprise network plan and information systems.</details></li>
             </ul>
         </div>
         <footer>
