--- a/hw/hw1/se.html
+++ b/hw/hw1/se.html
@@ -21,7 +21,7 @@
         </nav>
         <button class="button">Apply NOW!</button>
         <br /><br /><br />
-        <img src="img/se_graphic.jpg" />
+        <img src="img/se_graphic.jpg" alt = "Software Engineering banner"/>
         <div id="content">
             <table>
                 <tr id="table-header">
@@ -43,9 +43,9 @@
             </table>
             <h2>Outcomes</h2>
             <ul>
-                <li><details><summary span class="hobby">Advanced Programming:</summary> Apply object-oriented techniques to software construction.</details></li>
-                <li><details><summary span class="hobby">Specialized Programming:</summary> Apply programming skills to a specialized application.</details></li>
-                <li><details><summary span class="hobby">Planning, Analysis, and Production of Software Application:</summary> Demonstrate the ability to analyze, plan, and produce a complete software application.</details></li>
+                <li><details><summary>Advanced Programming:</summary> Apply object-oriented techniques to software construction.</details></li>
+                <li><details><summary>Specialized Programming:</summary> Apply programming skills to a specialized application.</details></li>
+                <li><details><summary>Planning, Analysis, and Production of Software Application:</summary> Demonstrate the ability to analyze, plan, and produce a complete software application.</details></li>
             </ul>
         </div>
         <footer>
