--- a/hw/hw1/gd.html
+++ b/hw/hw1/gd.html
@@ -19,9 +19,9 @@
             <a href="ns.html">Network and Security</a>
             <a href="se.html">Software Engineering</a>
         </nav>
-        <button class="button">Apply NOW!</button>
+        <a href = "https://csumb.edu/admissions#heading-817a553f-8ec2-4811-b141-13154a1bcb92"><button class="button">Apply NOW!</button></a>
         <br /><br /><br />
-        <img src="img/gd_graphic3.jpg" alt = "Game Design banner"/>
+        <a href="http://weblance.co.in/portfolio-detail/Web_Banner_Designs"><img src="img/gd_graphic3.jpg" alt = "Game Design banner"/></a>
         <div id="content">
             
             <table>
@@ -48,7 +48,8 @@
                 <li><details><summary>Game Programming:</summary> Develop and produce a computer game.</details></li>
                 <li><details><summary>Planning, Analysis and Production of Digital Games:</summary> Demonstrate the ability to analyze, plan and produce a computer game.
                 Utilize professional level platforms and tools to produce digital games that meet the user needs and system constraints.</details></li>
-            </ul>
+            </ul><br />
+            Source: <a href="https://csumb.edu/scd/computer-science-bs">CSUMB CS Program description</a>
         </div>
         <footer>
             <hr>
