--- a/hw/hw1/index.html
+++ b/hw/hw1/index.html
@@ -19,7 +19,7 @@
             <a href="ns.html">Network and Security</a>
             <a href="se.html">Software Engineering</a>
         </nav>
-        <button class="button">Apply NOW!</button>
+        <a href = "https://csumb.edu/admissions#heading-817a553f-8ec2-4811-b141-13154a1bcb92"><button class="button">Apply NOW!</button></a>
         <br />
         <main>
             <div class="welcomeText">
@@ -27,14 +27,15 @@
                 science concepts paired with applied information technology skills. Students are trained for
                 careers in the tech industry or to become competitive applicants for graduate programs.
             <figure id="me">
-                <img src="img/cs.jpg" alt="Picture of CS students" />
+                <a href="https://csumb.edu/scd/computer-science-bs"><img src="img/cs.jpg" alt="Picture of CS students" /></a>
             </figure>
                     <h2>Why study CS?</h2>
                     From communication to science to design, knowledge of computing is the key to new advancements. 
                     With this degree, you'll have the ability to make people's lives better with technology. 
                     You'll also be joining one of the most in-demand and highly paid fields. Finally, by studying 
                     Computer Science, you'll be trained to become a modern-day problem solver. You'll break down 
-                    real-world challenges and design the steps computers will take to find a solution.
+                    real-world challenges and design the steps computers will take to find a solution.<br />
+                    Source: <a href="https://csumb.edu/scd/computer-science-bs">CSUMB CS Program description</a>
             <h2>Concentrations</h2><br />
             </div>
             <div class="flex-container">
