--- a/hw/hw1/ns.html
+++ b/hw/hw1/ns.html
@@ -19,9 +19,9 @@
             <a class = "active" href="ns.html">Network and Security</a>
             <a href="se.html">Software Engineering</a>
         </nav>
-        <button class="button">Apply NOW!</button>
+        <a href = "https://csumb.edu/admissions#heading-817a553f-8ec2-4811-b141-13154a1bcb92"><button class="button">Apply NOW!</button></a>
         <br /><br /><br />
-        <img src="img/ns_graphic.jpg" alt = "Cybersecurity banner"/>
+        <a href= "https://www.njcu.edu/it/cyber-security"><img src="img/ns_graphic.jpg" alt = "Cybersecurity banner"/></a>
         <div id="content">
             <table>
                 <tr id="table-header">
@@ -46,7 +46,8 @@
                 <li><details><summary>Network Fundamentals:</summary> Understand and apply network fundamentals.</details></li>
                 <li><details><summary>Network Security:</summary> Understand and apply fundamentals of security technologies in protecting networks.</details></li>
                 <li><details><summary>Network Management & Administration:</summary> Apply processes and methods used to create an enterprise network plan and information systems.</details></li>
-            </ul>
+            </ul><br />
+            Source: <a href="https://csumb.edu/scd/computer-science-bs">CSUMB CS Program description</a>
         </div>
         <footer>
             <hr>
