--- a/hw/hw1/se.html
+++ b/hw/hw1/se.html
@@ -19,9 +19,9 @@
             <a href="ns.html">Network and Security</a>
             <a class = "active" href="se.html">Software Engineering</a>
         </nav>
-        <button class="button">Apply NOW!</button>
+        <a href = "https://csumb.edu/admissions#heading-817a553f-8ec2-4811-b141-13154a1bcb92"><button class="button">Apply NOW!</button></a>
         <br /><br /><br />
-        <img src="img/se_graphic.jpg" alt = "Software Engineering banner"/>
+        <a href = "http://www.stragure.com/"><img src="img/se_graphic.jpg" alt = "Software Engineering banner"/></a>
         <div id="content">
             <table>
                 <tr id="table-header">
@@ -46,7 +46,8 @@
                 <li><details><summary>Advanced Programming:</summary> Apply object-oriented techniques to software construction.</details></li>
                 <li><details><summary>Specialized Programming:</summary> Apply programming skills to a specialized application.</details></li>
                 <li><details><summary>Planning, Analysis, and Production of Software Application:</summary> Demonstrate the ability to analyze, plan, and produce a complete software application.</details></li>
-            </ul>
+            </ul><br />
+            Source: <a href="https://csumb.edu/scd/computer-science-bs">CSUMB CS Program description</a>
         </div>
         <footer>
             <hr>
