--- a/labs/lab10/index.html
+++ b/labs/lab10/index.html
@@ -40,8 +40,15 @@
                             "score": score},
                     success: function(data,status) {
                        //alert(data.score + " " + data.attempts);
-                       $("#prevScore").html("Your Previous Score was: " + data.score);
-                       $("#totalAttempts").html("total attempts: " + (parseInt(data.attempts) + 1));
+                       if(!data){
+                            $("#prevScore").html("No previous score found.");
+                            $("#totalAttempts").html("total attempts: 1");
+                       }
+                       else{
+                            $("#prevScore").html("Your Previous Score was: " + data.score);
+                            $("#totalAttempts").html("total attempts: " + (parseInt(data.attempts) + 1));  
+                       }
+                       
                     
                     },
                     complete: function(data,status) { //optional, used for debugging purposes
