--- a/labs/lab8/index.html
+++ b/labs/lab8/index.html
@@ -46,7 +46,7 @@
                         $.ajax({
                         
                         type: "GET",
-                        url: "http://itcdland.csumb.edu/~milara/ajax/countyList.php?state=ca",
+                        url: "http://itcdland.csumb.edu/~milara/ajax/countyList.php",
                         dataType: "json",
                         data: { "state":$("#state").val() },
                         success: function(data,status) {
@@ -74,7 +74,7 @@
                     $.ajax({
                     
                     type: "GET",
-                    url: "http://itcdland.csumb.edu/~milara/ajax/cityInfoByZip.php?zip=93955",
+                    url: "http://itcdland.csumb.edu/~milara/ajax/cityInfoByZip.php",
                     dataType: "json",
                     data: { "zip": $("#zipCode").val() },
                     success: function(data,status) {
